# dns-collect

./: Cargo.toml  name_servers.json
app/: crawler.rs  reader.rs
dns_analysis/: plot.py
src/: collect.rs  error.rs  lib.rs  name_server.rs  record_wrapper.rs
