[package]
name = "dns-collect"
version = "0.1.0"
authors = ["Natnatee Dokmai <ndokmai@indiana.edu>"]
edition = "2018"

[dependencies]
trust-dns-proto = {version = "0.19", features = ["serde-config"]}
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_json = "1.0"
chrono = "0.4"

[[bin]]
name = "crawler"
path = "app/crawler.rs"

[[bin]]
name = "reader"
path = "app/reader.rs"
